example-2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: example-2
  labels: 
    name: example-2
