example-2/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec: 
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
  selector:
    app: notification-service
