example-2/shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-service
spec: 
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
  selector:
    app: shop-service
