example-2/web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec: 
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
  selector:
    app: web-service
