example-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 8001
      - path: /shop-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: shop-service
            port:
              number: 80
      - path: /identity-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: identity-service
            port:
              number: 80
